# AdmixtureBayes

./: pyproject.toml
admixturebayes/: MCMC.py  MCMCMC.py  Rtree_to_covariance_matrix.py  __init__.py  analyzeSamples.py  construct_covariance_choices.py  construct_starting_trees_choices.py  makePlots.py  mcmc_proposals.py  meta_proposal.py  posterior.py  runMCMC.py  tree_statistics.py
